--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_EtfResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_EtfResultTemplate.cshtml
@@ -129,7 +129,7 @@
         @*【市價(日期)】=> 市價績效,市價風險,交易狀況,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="4">市價<br>(日期)</div>
-            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= NetAssetValueDate %></span></div>
+            <div class="c-cardTable__content"><%= MarketPrice.Text %><br><span class="t-date"><%= MarketPriceDate %></span></div>
         </td>
         @*【幣別】=> 市價績效,淨值績效,基本資料*@
         <td class="c-cardTable__body" data-card-table-width="1/2">
