修正InterestedFund弱點掃描

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/InterestedFund/InterestedFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/InterestedFund/InterestedFund.cshtml
@@ -49,22 +49,29 @@
             });
         }
 
+        function sanitize(str) {
+            return $('<div>').text(str).html();
+            }
+
         //請求六支基金的績效數據並繪圖
         function getBatchFundPerformance(fundData) {
             var fundIds = fundData.map(fund => fund.FundId).join(',');
+            var token = $('input[name="__RequestVerificationToken"]').val();
 
             $.ajax({
                 url: '@FundCloseYearPerformanceApiUrl',
                 method: 'POST',
                 data: {
-                    fundIDs: fundIds
+                    fundIDs: fundIds,
+                    __RequestVerificationToken: token
                 },
                 success: function (performanceData) {
                     try {
                         if (performanceData && performanceData.length !== 0) {
                             performanceData.forEach(function (data) {
                                 if (data.fundId && data.resultSet && data.resultSet.result && data.resultSet.result.length > 0) {
-                                    var $chartElement = $(`[data-chart="mini"][data-fund-id="${data.fundId}"]`);
+                                   var sanitizedFundId = DOMPurify.sanitize(data.fundId);
+                                   var $chartElement = $(`[data-chart="mini"][data-fund-id="${sanitizedFundId}"]`);
                                     if ($chartElement.length > 0) {
                                         const dataValues = data.resultSet.result.map(item => parseFloat(item.v2));
                                         dataValues.reverse();
