update: 調整預約諮詢日曆icon可點擊

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -6,7 +6,11 @@
 {
     return;
 }
-
+<style>
+.o-calendarBox::after{
+    pointer-events: none;/*日曆icon點擊也可顯示日曆*/
+}
+</style>
 <div class="l-mainstage">
     <div class="l-mainstage__wrap">
         <div class="l-mainstage__title">
